<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.Group
        android:id="@+id/emailPasswordButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"/>

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        app:layout_constraintBottom_toBottomOf="@+id/verifyEmailButton"
        app:layout_constraintEnd_toStartOf="@+id/verifyEmailButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/verifyEmailButton" />

    <Button
        android:id="@+id/verifyEmailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_email"
        android:theme="@style/ThemeOverlay.MyDarkButton"/>

    <Button
        android:id="@+id/reloadButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reload"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        app:layout_constraintBottom_toBottomOf="@+id/verifyEmailButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/verifyEmailButton"
        app:layout_constraintTop_toTopOf="@+id/verifyEmailButton" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/signedInButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="signOutButton, verifyEmailButton, reloadButton" />
</androidx.constraintlayout.widget.ConstraintLayout>